--- a/projects/tube-visualisation/package.json
+++ b/projects/tube-visualisation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "london-underground-viz",
+  "name": "tube-visualisation",
   "private": true,
   "version": "1.0.0",
   "description": "",
